# sdg_data_generation_public

./: .gitignore  README.md  pyproject.toml
config/: dataset_features_catalog.yaml  dataset_features_schema.yaml
prompts/: attr_prompt.txt
src/sdg_data_generation/: feature_type_hinting.py  generate.py  stratify_funcs.py
